session-1/instance.tf
# Creating the WordPress Instance
resource "aws_instance" "web" {
  ami           = data.aws_ami.ami.id
  instance_type = var.instance_type
  vpc_security_group_ids =  [aws_security_group.allow_http.id]
  key_name  = "nabeel-big"

  connection {
    host = self.public_ip
    user    = "ec2-user"
    private_key  = "${file("~/.aws/nabeel-big.pem")}"
  }

  provisioner "file" {
    source      = "install-wordpress.sh"
    destination = "/tmp/install-wordpress.sh"
  }

  provisioner "remote-exec" {
    inline = [
      "chmod +x /tmp/install-wordpress.sh",
      "/tmp/install-wordpress.sh",
    ]
  }

  tags = local.common_tags
}


# Instane Security Group
resource "aws_security_group" "allow_http" {
  name        = "allow_http"
  description = "Allow HTTP inbound traffic"

  ingress {
      description      = "HTTP from the public"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    }

  ingress {
      description      = "SSH from the public"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["${chomp(data.http.myip.body)}/32"]
    }

  egress {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
    }

  tags = local.common_tags
}
